# HybridData

./: .dockerignore  .env.live.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  hde.example.toml
backend/: pyproject.toml
backend/hde/: __init__.py  chat.py  chunking.py  cli.py  config.py  embeddings.py  engine.py  gate.py  graph.py  ids.py  ingestion.py  judge.py  llm.py  provenance.py  retrieval.py  store.py  synthesis.py  telemetry.py  testing.py
backend/hde/api/: __init__.py  app.py
backend/hde/ingest/: __init__.py  base.py  csv_adapter.py  json_corpus.py  json_tree_adapter.py  markdown_adapter.py  runner.py
backend/tests/: conftest.py  test_adapters.py  test_agnosticism.py  test_chat.py  test_config.py  test_gate.py  test_graph_and_chunking.py  test_ingestion.py  test_pipeline_and_api.py  test_retrieval.py  test_telemetry_and_locking.py  test_testing.py
data/: parts-tree.json
data/demo-corpus/: people.json
data/examples/: tickets.csv
docs/: adding-a-data-source.md  api.md  architecture-research.md  architecture.md  chat.md  deployment.md  evaluation.md
docs/research-assets/: make_charts.py
eval/: .gitignore  calibrate_gate.py  gold-qa.json  gold-trails.json  judge.py  run_eval.py
eval/results/: summary.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: ask-and-citations.spec.ts  chat-conversations.spec.ts  explorer.spec.ts  (+8 more)
scripts/: audit.sh  generate_parts_tree.py
(+832 files in other folders)
