[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hde"
version = "1.0.0"
description = "Hybrid-Data-Example: a reference hybrid RAG + knowledge-graph document-intelligence engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlite-vec>=0.1.1",
]

[project.optional-dependencies]
# Production embedders / answer models — install what you actually use.
sbert = ["sentence-transformers>=2.2"]
anthropic = ["anthropic>=0.39"]
dev = ["pytest>=7.4", "httpx>=0.27"]

[project.scripts]
hde = "hde.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hde*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
